--- a/firstdev/templates/index.html
+++ b/firstdev/templates/index.html
@@ -9,5 +9,7 @@
 <body>
     <h1>Работает!</h1>
     <p>если цвет текста зеленый, то статика подрубилась))</p>
+    <h3>Дата и время сборки на сервере travis</h3>
+    <p>{{ date }}</p>
 </body>
 </html>
